package com.you.lld.problems.stockexchange.model;
import java.util.*;
public
class Investor  {
    private String investorId;
    public Investor(String id)  {
        investorId=id;
    }
    public String getInvestorId()  {
        return investorId;
    }
}
