package com.you.lld.problems.stockexchange.model;
import java.util.*;
public
class MarketData  {
    private String marketdataId;
    public MarketData(String id)  {
        marketdataId=id;
    }
    public String getMarketDataId()  {
        return marketdataId;
    }
}
