package com.you.lld.problems.stockexchange.model;
import java.util.*;
public
class Portfolio  {
    private String portfolioId;
    public Portfolio(String id)  {
        portfolioId=id;
    }
    public String getPortfolioId()  {
        return portfolioId;
    }
}
