package com.you.lld.problems.stockexchange.model;
import java.util.*;
public
class Stock  {
    private String stockId;
    public Stock(String id)  {
        stockId=id;
    }
    public String getStockId()  {
        return stockId;
    }
}
